--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -503,7 +503,7 @@
     <string name="btn_block">屏蔽选项</string>
     <string name="text_god_verify">%s领域大神</string>
     <string name="text_login_failed">登录失败 %s</string>
-    <string name="text_login_success">登录成功，即将跳转</string>
+    <string name="text_login_success">登录成功</string>
     <string name="text_login_failed_default">登录失败</string>
     <string name="video_preview_not_supported">暂不支持视频预览</string>
     <string name="button_ok">我知道了</string>
