--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,6 +247,7 @@
     <string name="text_please_wait">请稍候……</string>
     <string name="title_loading_data">正在加载数据</string>
     <string name="text_oksign_no_signable">没有可签到的吧</string>
+    <string name="text_oksign_unknown_error">出现未知错误</string>
     <string name="title_forum_info">关于本吧</string>
     <string name="settings_forum_fab_function">吧页面悬浮按钮功能</string>
     <string name="btn_post">发贴</string>
@@ -485,6 +486,10 @@
     <string name="title_lift_up_bottom_bar">全面屏优化</string>
     <string name="summary_lift_up_bottom_bar">略微抬起贴子页面底栏以方便点按</string>
     <string name="button_open">打开</string>
+    <string name="notification_group_messages">消息通知</string>
+    <string name="notification_group_messages_description">贴吧的各种消息通知</string>
+    <string name="notification_channel_reply">回复我的</string>
+    <string name="notification_channel_mention">提到我的</string>
     <string name="btn_hide">隐藏</string>
     <string name="desc_search_sug">搜索联想：%s</string>
     <string name="title_forum_intro">本吧简介</string>
