refactor(app,core-ui): migrate placeholder and error state compose widgets

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
 <resources>
     <string name="button_undo">Undo</string>
     <string name="button_redo">Redo</string>
+    <string name="tip_empty">这里什么都没有</string>
+    <string name="btn_reload">重新加载</string>
+    <string name="title_no_internet_connectivity">网络找不到了</string>
+    <string name="title_api_error">啊哦，出错了</string>
+    <string name="title_unknown_error">发生了一个奇怪的错误…</string>
+    <string name="title_not_logged_in">你尚未登录</string>
+    <string name="message_no_internet_connectivity">%s。请检查你的网络连接是否正常</string>
+    <string name="message_unknown_error">哦我的老伙计，我向你保证这真的是一个奇怪的错误……</string>
+    <string name="message_not_logged_in">请登录后继续访问</string>
+    <string name="btn_refresh">刷新</string>
+    <string name="title_empty">这里什么都没有</string>
+    <string name="error_tip">出错了</string>
 </resources>
