--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="title_main">首页</string>
     <string name="title_jump_page">跳页</string>
     <string name="tip_jump_page">当前 %1$d/%2$d 页</string>
+    <string name="toast_jump_page_invalid_input">请输入合法的页码</string>
+    <string name="toast_jump_page_clamped">超过最大页，已跳至第 %1$d 页</string>
     <string name="title_default">贴吧 Lite</string>
     <string name="title_my_collect">我的收藏</string>
     <string name="title_at_me">提到我的</string>
@@ -229,6 +231,7 @@
     <string name="title_history_thread">贴子记录</string>
     <string name="title_history_forum">经过贴吧</string>
     <string name="title_thread_header">回复 %1$s</string>
+    <string name="tip_thread_no_replies">这个帖子暂时还没有回复</string>
     <string name="title_oksign_slow_mode">慢速模式</string>
     <string name="summary_oksign_slow_mode">开启后，一键签到时签到每个吧的时间间隔将会更长</string>
     <string name="summary_oksign_slow_mode_on">一键签到时签到每个吧的时间间隔将会更长</string>
